fix: applicaiotn.yml 의존성 변경 feat: CommentService, CommetRepository 기능 추가

--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
-	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.5.9'
+//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2")
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
