--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+    jackson.date-format: yyyy-MM-dd
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+
   jpa:
     database: h2
     database-platform: org.hibernate.dialect.H2Dialect
@@ -14,8 +19,10 @@ spring:
         show_sql: true
         format_sql: true
 
-logging.level:
-  org.hibernate.SQL: debug
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
 
 #logging:
 #  level:
