create: 마커, 상세목록 클릭 시 지도 아래에 제과점 detail 페이지 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.password=1004
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# KAKAO
+kakao.uri = https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=5f0d2c24f095f13bf11b280d9febfd98&redirect_uri=http://127.0.0.1:8080/api/kakao/callback
