--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # KAKAO
 kakao.uri = https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=5f0d2c24f095f13bf11b280d9febfd98&redirect_uri=http://127.0.0.1:8080/api/kakao/callback
+
+# JWT
+jwt.token.expiration-time = 1000000
+jwt.secret-key = LazycatMiniProjectBread2U
