--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ out/
 !**/src/test/**/out/
 
 ./src/main/resources/application.properties
+src/main/resources/application.properties
 
 ### NetBeans ###
 /nbproject/private/
