refactor: web cors 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ kakao.redirect-uri = ${KAKAO_REDIRECT_URI}
 jwt.token.expiration-time = ${JWT_EXPIRATION_TIME}
 jwt.secret-key = ${JWT_SECRET_KEY}
 
+#url
+origin.url = ${ORIGIN_URL}
